# LSVI

./: .gitignore  README.md  conda_lsvi
LSVI/: pyproject.toml  setup.py
LSVI/experiments/: time_wrapper.py
LSVI/experiments/bayesianSelectionVariable/: smc.py  utils.py
LSVI/experiments/bayesianSelectionVariable/concrete/: Bernoulli_vs_ConcreteStrengthDataset.py  Concrete_Data.xls  concrete.py  concrete_from_particles.csv  concrete_from_particles_simple.csv  generate_concrete_from_particles.py  generate_concrete_from_particles_simple.py  time.py  utils.py
LSVI/experiments/logisticRegression/: utils.py
LSVI/experiments/logisticRegression/mnist/: compare_with_scikitlearn_reg.ipynb  gaussianMeanField_ADVI.py  gaussianMeanField_ADVI_blackjax.py  gaussianMeanfield_Nicolas.py  heuristic_GaussianMeanField_Nicolas.py  load_mnist.py  ngd_diagonal.py  plot_walltime.ipynb  runtime  time.py  walltime.py
LSVI/experiments/logisticRegression/pima_logistic_regression/: gaussian.py  gaussian_Nicolas.py  heuristic_gaussian_Nicolas.py  ngd.py  runtime  time.py
LSVI/experiments/logisticRegression/sonar_logistic_regression/: gaussian.py  gaussianMeanField.py  gaussianMeanField_Nicolas.py  ngd.py  (+8 more)
LSVI/experiments/syntheticLikelihood/: fowler_toad.py  generate_synthetic_dataset.py  heuristic_gaussian.py  heuristic_truncated_gaussian.py  radio.csv  radio_matrix.csv  runtime  rwmh.py  time.py  write_radio_matrix.py
LSVI/variational/: exponential_family.py  gaussian_lsvi.py  laplace.py  lsvi.py  meanfield_gaussian_lsvi.py  ngd.py  numpy_gaussian_lsvi.py  numpy_lsvi.py  utils.py
(+100 files in other folders)
